--- a/styles/xml/tableview.fxml
+++ b/styles/xml/tableview.fxml
@@ -7,20 +7,20 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="FXMLDocumentController" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="39.0" layoutY="39.0" prefHeight="23.0" prefWidth="184.0" text="All Portfolios" AnchorPane.leftAnchor="39.0" AnchorPane.topAnchor="39.0">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TableView layoutX="34.0" layoutY="79.0" prefHeight="302.0" prefWidth="533.0" AnchorPane.leftAnchor="34.0" AnchorPane.rightAnchor="34.0" AnchorPane.topAnchor="79.0">
+      <TableView layoutX="34.0" layoutY="79.0" prefHeight="302.0" prefWidth="533.0" AnchorPane.leftAnchor="34.0" AnchorPane.rightAnchor="34.0" AnchorPane.topAnchor="79.0" fx:id="table">
         <columns>
-          <TableColumn prefWidth="103.0" text="Name" />
-          <TableColumn prefWidth="114.0" text="Account Num" />
-            <TableColumn prefWidth="134.0" text="Download Port." />
-            <TableColumn prefWidth="103.0" text="Download TL" />
-            <TableColumn prefWidth="76.0" text="Delete" />
+          <TableColumn prefWidth="103.0" text="Name" fx:id="names"/>
+          <TableColumn prefWidth="114.0" text="Account Num" fx:id="nums"/>
+            <TableColumn prefWidth="134.0" text="Download Port." fx:id="port"/>
+            <TableColumn prefWidth="103.0" text="Download TL" fx:id="tl"/>
+            <TableColumn prefWidth="76.0" text="Delete" fx:id="del"/>
         </columns>
       </TableView>
    </children>
