--- a/styles/xml/tableview.fxml
+++ b/styles/xml/tableview.fxml
@@ -5,10 +5,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.MenuBar?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="FXMLDocumentController" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
+
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLDocumentController" fx:id="root">
+
+<children><MenuBar minHeight="10.0" prefHeight="0.0" prefWidth="640.0" style="-fx-background-color: #bfe8b5;" VBox.vgrow="NEVER" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
       <Label layoutX="39.0" layoutY="39.0" prefHeight="23.0" prefWidth="184.0" text="All Portfolios" AnchorPane.leftAnchor="39.0" AnchorPane.topAnchor="39.0">
          <font>
             <Font size="18.0" />
@@ -23,5 +29,6 @@
             <TableColumn prefWidth="76.0" text="Delete" fx:id="del"/>
         </columns>
       </TableView>
-   </children>
 </AnchorPane>
+</children>
+</VBox>
