--- a/styles/xml/tableview.fxml
+++ b/styles/xml/tableview.fxml
@@ -10,7 +10,7 @@
 
 
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="FXMLDocumentController" fx:id="root">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TableviewController" fx:id="root">
 
 <children><MenuBar minHeight="10.0" prefHeight="0.0" prefWidth="640.0" style="-fx-background-color: #bfe8b5;" VBox.vgrow="NEVER" />
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
